--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-
-2020-1/apunte/main.aux
-2020-1/apunte/main.idx
-2020-1/apunte/main.log
-2020-1/apunte/main.toc
+2020/apunte/src/*.aux
+2020/apunte/src/*.idx
+2020/apunte/src/*.out
+2020/apunte/src/*.log
+2020/apunte/src/*.synctex.gz
+2020/apunte/src/*.toc
+2020/apunte/src/*.ilg
+2020/apunte/src/*.ind
